--- a/assignment/de01/src/lien-he.html
+++ b/assignment/de01/src/lien-he.html
@@ -1,1 +1,9 @@
 <h1>Liên hệ</h1>
+
+<form id="frmLienHe">
+  <label>Họ tên</label>
+  <input type="text" />
+
+</form>
+
+<a href="#!/" class="btn btn-outline">Quay về Trang chủ</a>
