--- a/assignment/de01/src/index.html
+++ b/assignment/de01/src/index.html
@@ -18,6 +18,13 @@
 
   <title>Bài tập lớn - Đề 01 | NenTang.vn</title>
 
+  <!-- Google Font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Fuggles&family=Nunito+Sans:ital,opsz,wght@0,6..12,200;0,6..12,300;0,6..12,400;0,6..12,500;0,6..12,600;0,6..12,700;0,6..12,800;0,6..12,900;0,6..12,1000;1,6..12,200;1,6..12,300;1,6..12,400;1,6..12,500;1,6..12,600;1,6..12,700;1,6..12,800;1,6..12,900;1,6..12,1000&display=swap"
+    rel="stylesheet">
+
   <!-- Liên kết CSS sử dụng cho toàn dự án -->
   <link href="assets/css/app.css" type="text/css" rel="stylesheet" />
 </head>
