update trang chủ

--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@
 <body>
     <h1>Nền tảng Kiến thức AngularJS | <a href="https://nentang.vn">https://nentang.vn</a></h1>
     <h2>Danh sách bài học</h2>
-    <h3>HTML căn bản</h3>
-    <ul>
-        <li><a href="course-html-css-js/lesson1-cau-truc-file-html-co-ban/index.html">Cấu trúc file HTML cơ bản</a></li>
-    </ul>
     
-    <h3>Bài tập AngularJS</h3>
+    <h2>Bài tập AngularJS</h2>
+
+    <h2>Bài tập lớn - AngularJS</h2>
     <ul>
-        <li><a href="course-html-css-js/lesson1-cau-truc-file-html-co-ban/index.html">Cấu trúc file HTML cơ bản</a></li>
+        <li href="assignment/de01/src/index.html"><a>Bài tập lớn AngularJS - Đề 01</a></li>
     </ul>
 </body>
 </html>
