update trang chủ

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <h2>Bài tập lớn - AngularJS</h2>
     <ul>
-        <li href="assignment/de01/src/index.html"><a>Bài tập lớn AngularJS - Đề 01</a></li>
+        <li><a href="assignment/de01/src/index.html">Bài tập lớn AngularJS - Đề 01</a></li>
     </ul>
 </body>
 </html>
